fix: premium learning search cls & alignment issues EXLM-5111 (#2711)

--- a/blocks/premium-learning-search/premium-learning-search.css
+++ b/blocks/premium-learning-search/premium-learning-search.css
@@ -141,7 +141,12 @@ atomic-search-layout.no-results:has(.all-facets-hidden)
 
   .premium-learning-search-wrapper:has(.premium-learning-search.block) .premium-learning-search {
     margin-top: 6px;
-    margin-left: -6px;
+    margin-left: 2px;
+  }
+
+  .premium-learning-search-wrapper:has(.premium-learning-search.block) .premium-learning-search-block-cta {
+    top: 32px;
+    position: relative;
   }
 
   .premium-learning-search-no-results-header {
